[gd_scene load_steps=14 format=2]

[ext_resource path="res://textures/button/check_box_off.png" type="Texture" id=1]
[ext_resource path="res://textures/button/check_box_on.png" type="Texture" id=2]
[ext_resource path="res://scripts/interface/menu/settings.gd" type="Script" id=3]
[ext_resource path="res://textures/button/button_pressed.png" type="Texture" id=4]
[ext_resource path="res://textures/button/button_hover.png" type="Texture" id=6]
[ext_resource path="res://fonts/font.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://textures/hostile/hostile_5.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 7 )

[node name="Settings" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -300.0
margin_right = 500.0
margin_bottom = 300.0
script = ExtResource( 3 )

[node name="GridContainer" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -162.0
margin_top = -142.0
margin_right = 162.0
margin_bottom = 142.0
columns = 2

[node name="Audio" type="HBoxContainer" parent="GridContainer"]
margin_right = 172.0
margin_bottom = 38.0

[node name="Label" type="Label" parent="GridContainer/Audio"]
margin_right = 87.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 5 )
text = "Audio"

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer"]
margin_left = 176.0
margin_right = 324.0
margin_bottom = 38.0

[node name="Music" type="HBoxContainer" parent="GridContainer"]
margin_top = 42.0
margin_right = 172.0
margin_bottom = 92.0

[node name="ButtonMusic" type="TextureButton" parent="GridContainer/Music"]
margin_right = 50.0
margin_bottom = 50.0
toggle_mode = true
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )

[node name="Label" type="Label" parent="GridContainer/Music"]
margin_left = 54.0
margin_top = 6.0
margin_right = 138.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 1 )
text = "Music"
align = 1
valign = 1

[node name="Sound" type="HBoxContainer" parent="GridContainer"]
margin_left = 176.0
margin_top = 42.0
margin_right = 324.0
margin_bottom = 92.0

[node name="ButtonSound" type="TextureButton" parent="GridContainer/Sound"]
margin_right = 50.0
margin_bottom = 50.0
toggle_mode = true
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )

[node name="Label" type="Label" parent="GridContainer/Sound"]
margin_left = 54.0
margin_top = 6.0
margin_right = 148.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
text = "Sound"
align = 1
valign = 1

[node name="Graphics" type="HBoxContainer" parent="GridContainer"]
margin_top = 96.0
margin_right = 172.0
margin_bottom = 134.0

[node name="Label" type="Label" parent="GridContainer/Graphics"]
margin_right = 132.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 6 )
text = "Graphics"

[node name="HBoxContainer2" type="HBoxContainer" parent="GridContainer"]
margin_left = 176.0
margin_top = 96.0
margin_right = 324.0
margin_bottom = 134.0

[node name="Particle" type="HBoxContainer" parent="GridContainer"]
margin_top = 138.0
margin_right = 172.0
margin_bottom = 188.0

[node name="ButtonParticle" type="TextureButton" parent="GridContainer/Particle"]
margin_right = 50.0
margin_bottom = 50.0
toggle_mode = true
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )

[node name="Label" type="Label" parent="GridContainer/Particle"]
margin_left = 54.0
margin_top = 6.0
margin_right = 163.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 3 )
text = "Particle"
align = 1
valign = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="GridContainer"]
margin_left = 176.0
margin_top = 138.0
margin_right = 324.0
margin_bottom = 188.0

[node name="Other" type="HBoxContainer" parent="GridContainer"]
margin_top = 192.0
margin_right = 172.0
margin_bottom = 230.0

[node name="Label" type="Label" parent="GridContainer/Other"]
margin_right = 84.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 6 )
text = "Other"

[node name="HBoxContainer4" type="HBoxContainer" parent="GridContainer"]
margin_left = 176.0
margin_top = 192.0
margin_right = 324.0
margin_bottom = 230.0

[node name="Softness" type="HBoxContainer" parent="GridContainer"]
margin_top = 234.0
margin_right = 172.0
margin_bottom = 284.0

[node name="ButtonSoftness" type="TextureButton" parent="GridContainer/Softness"]
margin_right = 50.0
margin_bottom = 50.0
toggle_mode = true
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )

[node name="Label" type="Label" parent="GridContainer/Softness"]
margin_left = 54.0
margin_top = 6.0
margin_right = 172.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 3 )
text = "Softness"
align = 1
valign = 1

[node name="FPS" type="HBoxContainer" parent="GridContainer"]
margin_left = 176.0
margin_top = 234.0
margin_right = 324.0
margin_bottom = 284.0

[node name="ButtonFPS" type="TextureButton" parent="GridContainer/FPS"]
margin_right = 50.0
margin_bottom = 50.0
toggle_mode = true
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )

[node name="Label" type="Label" parent="GridContainer/FPS"]
margin_left = 54.0
margin_top = 6.0
margin_right = 103.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 3 )
text = "FPS"
align = 1
valign = 1

[node name="ButtonBack" type="TextureButton" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 160.0
margin_bottom = 60.0
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 6 )

[node name="Label" type="Label" parent="ButtonBack"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.5
margin_top = -20.5
margin_right = 41.5
margin_bottom = 20.5
custom_fonts/font = SubResource( 4 )
text = "Back"
align = 1
valign = 1

[node name="Hostile51" type="Sprite" parent="."]
position = Vector2( 170, 304 )
rotation = 3.93397
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 8 )

[node name="Hostile52" type="Sprite" parent="."]
position = Vector2( 743, 528 )
rotation = 1.31074
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 8 )

[node name="Hostile53" type="Sprite" parent="."]
position = Vector2( 817, 84 )
rotation = -0.546288
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 8 )

[connection signal="pressed" from="GridContainer/Music/ButtonMusic" to="." method="_on_ButtonMusic_pressed"]
[connection signal="pressed" from="GridContainer/Sound/ButtonSound" to="." method="_on_ButtonSound_pressed"]
[connection signal="pressed" from="GridContainer/Particle/ButtonParticle" to="." method="_on_ButtonParticle_pressed"]
[connection signal="pressed" from="GridContainer/Softness/ButtonSoftness" to="." method="_on_ButtonSoftness_pressed"]
[connection signal="pressed" from="GridContainer/FPS/ButtonFPS" to="." method="_on_ButtonFPS_pressed"]
[connection signal="pressed" from="ButtonBack" to="." method="_on_ButtonBack_pressed"]
